[package]
name = "range-interner"
description = "Map arbitrary values into a specified range."
homepage = "https://github.com/ryzhyk/range-interner"
version = "0.1.0"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ryzhyk/range-interner"
readme = "README.md"
keywords = ["intern", "interner", "interning", "range allocator"]

[dependencies]
range-alloc="0.1"
num-traits="0.2"
